add some paper links, best paper award in neurobots

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       Center for Robotics and Intelligent Systems,
       Italian Institute of Technology, Italy.
       My major is high speed image processing with event-based cameras and high-speed cameras, 3D sensing, and Robotics.
-      In particular, my research focused on a real-time event-driven feature tracking, an adaptive 3D sensing system
+      In particular, my research focused on a real-time event-driven corner and line segment feature detection and tracking, an adaptive 3D sensing system
       with adjustable spatio-temporal resolution and measurement in real time,
       a real-time video superimposition with cooperative teleoperated robots,
       and robust and efficient vehicle detection in Intelligent Transportation Systems.
@@ -101,6 +101,7 @@
 
       <h3>Awards</h3>
       <ul>
+        <li>Best Paper Award, IROS 2025 Workshop on Neuromorphic Perception for Real World Robotics (NeuRobots), 2025.10</li>
         <li><a href="static/SSUP_Award.jpg">奨励賞, 2020年度 Sensing Solution 大学共同研究プログラム(SSUP)研究成果発表会, 2021.03</a></li>
         <li><a href="static/Award_0925_1.pdf">優秀発表 企業賞, 2020.10</a></li>
         <li><a href="https://www.jsme.or.jp/archive/award/shou6-19.pdf">日本機械学会 若手優秀講演フェロー賞, 2020.6</a></li>
@@ -111,10 +112,6 @@
       <div class="title" id="pubs"> Publications </div>
       <h3>Journal Papers</h3>
       <ol>
-        <!-- <li>Jiahang Wu, <u><b>Mikihiro Ikura</b></u>, Luna Gava, Masayoshi Mizuno, Arren Glover, and Chiara Bartolozzi:
-          "A Lightweight Framework for Depth Estimation from Moving Stereo Event Cameras without Motion Cues",
-          IEEE Transaction on Robotics, 2025. (Submitted)
-        </li><br> -->
         <li>Takuya Igaue, Toko Hayamizu, Hiroshi Higuchi, <u><b>Mikihiro Ikura</b></u>,
           Kenichi Yoshida, Satoshi Yamanaka, Takashi Yamaguchi, Hajime Asama and Atsushi Yamashita:
           "Cooperative 3D Tunnel Measurement Based on 2D-3D Registration of Omnidirectional Laser Light",
@@ -166,18 +163,18 @@
       <ol>
         <li><b><u>Mikihiro Ikura</u></b>, Arren Glover, Masayoshi Mizuno, and Chiara Bartolozzi:
           "Lattice-allocated Real-time Line Segment Feature Detection and Tracking Using Only an Event-based Camera",
-          Proceedings of 2nd Workshop on NeVi2025, International Conference on Computer Vision (ICCV), 2025. (Accepted) <a href="https://arxiv.org/abs/2510.06829">https://arxiv.org/abs/2510.06829</a> [<a href="https://github.com/event-driven-robotics/RT-EvLDT">Code</a>] <b><font color="red">Spotlight session</font></b>
+          Proceedings of 2nd Workshop on NeVi2025, International Conference on Computer Vision (ICCV), 2025. [<a href="https://openaccess.thecvf.com/content/ICCV2025W/NeVi/html/Ikura_Lattice-allocated_Real-time_Line_Segment_Feature_Detection_and_Tracking_Using_Only_ICCVW_2025_paper.html">Paper</a>] [<a href="https://arxiv.org/abs/2510.06829">ArXiv</a>] [<a href="https://github.com/event-driven-robotics/RT-EvLDT">Code</a>] <b><font color="red">Spotlight session</font></b>
         </li><br>
         <li>
           Luna Gava, <b><u>Mikihiro Ikura</u></b>, Chiara Bartolozzi, Arren Glover:
           "SCARF: A Set of Centre Active Receptive Fields for Velocity Invariant Event Representation",
           Proceedings of Workshop on Neuromorphic Perception for Real World Robotics,
-          IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2025. (Accepted) <b><font color="red">Spotlight talk</font></b>
+          IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2025. [<a href="https://openreview.net/forum?id=Oc7PzozG2s">Paper</a>] <b><font color="red">Spotlight talk</font></b>
         </li><br>
         <li>Jiahang Wu, <u><b>Mikihiro Ikura</b></u>, Luna Gava, Masayoshi Mizuno, Arren Glover, and Chiara Bartolozzi:
-          "A Lightweight Framework for Depth Estimation from Moving Stereo Event Cameras without Motion Cues",
+          "Depth Estimation from Moving Stereo Event Cameras without Motion Cues",
           Proceedings of Workshop on Neuromorphic Perception for Real World Robotics,
-          IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2025. (Accepted) <b><font color="red">Spotlight talk</font></b>
+          IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2025. [<a href="https://openreview.net/forum?id=JxQeCNabIy">Paper</a>] <b><font color="red">Best Paper Award</font></b>, <b><font color="red">Spotlight talk</font></b>
         </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Cedric Le Gentil, Marcus G. Müller,
           Florian Schuler, Atsushi Yamashita and Wolfgang Stürzl:
