--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
       </ol>
 
       <div class="title" id="cv"> CV </div>
-      <h3><a href="static/CV_mikihiro_ikura.pdf">Download</a></h3>
+      <h3><a href="static/CV_mikihiro_ikura_simple.pdf">Summary</a> / <a href="static/CV_mikihiro_ikura_detailed.pdf">Detailed</a></h3>
     </div>
   </body>
 </html>
